--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ciseco</title>
     <link rel="stylesheet" href="./Assets/css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <meta name="google-site-verification" content="i_C60-6piTTytdQhxb8HM6Z6C3Ei4Bn2MEfuNiTcl5w" />
 </head>
 <body>
         <!-- //Navbar// -->
